[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/Menu.gd" type="Script" id=1]
[ext_resource path="res://ui/fnt_game_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/fnt_menu_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://audio/Menu - 362281__dominictreis__scene-change-music-sad.mp3" type="AudioStream" id=4]
[ext_resource path="res://sprites/Logo.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.345098, 0.0980392, 0.0980392, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.533333, 0.372549, 0.203922, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="BgColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.0901961, 0.117647, 1 )

[node name="Logo" type="TextureRect" parent="."]
modulate = Color( 0.443137, 0.227451, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.5
margin_top = 5.0
margin_right = 166.5
margin_bottom = 171.0
texture = ExtResource( 5 )

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -121.0
margin_right = 114.0
margin_bottom = -73.0
custom_fonts/font = ExtResource( 2 )
text = "С Т А Р Т"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -50.0
margin_right = 114.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 2 )
text = "В Ы Х О Д"

[node name="MusicEnable" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = 17.0
margin_right = -45.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "Музыка"

[node name="MusicSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = 16.0
margin_right = 114.0
margin_bottom = 40.0
focus_neighbour_bottom = NodePath("../SfxSlider")
max_value = 1.0
step = 0.01

[node name="SfxEnable" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = 40.0
margin_right = -61.0
margin_bottom = 64.0
focus_neighbour_right = NodePath("../SfxSlider")
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "Звуки"

[node name="SfxSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = 39.0
margin_right = 114.0
margin_bottom = 63.0
focus_neighbour_top = NodePath("../MusicSlider")
max_value = 1.0
step = 0.01

[node name="FullScreenEnable" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = 65.0
margin_right = 12.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 3 )
text = "Полн. экран"

[node name="DebugEnable" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = 65.0
margin_right = 113.0
margin_bottom = 89.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.603922, 0.356863, 0.215686, 1 )
custom_colors/font_color = Color( 0.603922, 0.356863, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.694118, 0.411765, 0.25098, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Отладка"

[node name="GameInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = 100.0
margin_right = 186.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.419608, 0.419608, 0.419608, 1 )
text = "Game by	 G-Shadow for PGD GameJam #10: Revived Fears
Itch:      https://gshadow.itch.io
GitHub: https://gshadows.github.com"

[node name="Copyrights" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = 157.0
margin_right = -45.0
margin_bottom = 176.0
mouse_filter = 1
custom_colors/font_color = Color( 0.631373, 0.8, 0.333333, 1 )
custom_fonts/font = ExtResource( 3 )
text = "АВТОРСКИЕ ПРАВА"
align = 1

[node name="CopyrightText" type="Label" parent="Copyrights"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -321.5
margin_right = 363.0
margin_bottom = -20.5
custom_colors/font_color = Color( 0.662745, 0.576471, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Бесплатный ШРИФТ: (c) Ruslan Khasanov (www.ruskhasanov.com)
https://www.behance.net/gallery/7435569/VETKA-free-font

Бесплатная МУЗЫКА с freemusicarchive.org:
1) Tom Aldrich - Mysterious
2) Disco Missile - Jet (live)

Бесплатные ЗВУКИ с FreeSound.org:
(c) yoyodaman234, inchadney, yudena, justinvoke, horroraudio, dominictreis,
breviceps, dkiller2204, glaneur-de-sons, ryusa, evanski, amir2mi, mrickey13,
deleted-user

Озвучка - моя :)"

[node name="Help" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 27.0
margin_top = 157.0
margin_right = 161.0
margin_bottom = 176.0
mouse_filter = 1
custom_colors/font_color = Color( 0.631373, 0.8, 0.333333, 1 )
custom_fonts/font = ExtResource( 3 )
text = "ПОМОЩЬ"
align = 1

[node name="HelpText" type="Label" parent="Help"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -248.5
margin_right = 17.0
margin_bottom = -20.5
custom_colors/font_color = Color( 0.662745, 0.576471, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "=== УПРАВЛЕНИЕ ===
Ходить: A, D
Бег: Shift
Стрелять: Ctrl или ЛКМ

Обзор: W
Действие: S
Лечиться: F

Полный экран: Alt + Enter
Выход: Esc"

[node name="GameWin" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.0
margin_top = -164.0
margin_right = 340.0
margin_bottom = 228.0
custom_colors/font_color = Color( 0.435294, 1, 0.478431, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.839216, 0.109804, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "ПОБЕДА !!!

Поздравляю с прохождением игры!

Спасибо за внимание!"
align = 1
valign = 1

[node name="GameLoose" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.0
margin_top = -164.0
margin_right = 340.0
margin_bottom = 228.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.305882, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "ВЫ ПРОИГРАЛИ

Попробуйте ещё раз!
Нелья позволить нечисти бесчинствовать!"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="AudioStreamMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[connection signal="mouse_entered" from="Start" to="." method="_on_Hover"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Hover"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="MusicEnable" to="." method="_on_Hover"]
[connection signal="toggled" from="MusicEnable" to="." method="_on_MusicEnable_toggled"]
[connection signal="drag_ended" from="MusicSlider" to="." method="_on_MusicSlider_drag_ended"]
[connection signal="mouse_entered" from="MusicSlider" to="." method="_on_Hover"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="mouse_entered" from="SfxEnable" to="." method="_on_Hover"]
[connection signal="toggled" from="SfxEnable" to="." method="_on_SfxEnable_toggled"]
[connection signal="drag_ended" from="SfxSlider" to="." method="_on_SfxSlider_drag_ended"]
[connection signal="mouse_entered" from="SfxSlider" to="." method="_on_Hover"]
[connection signal="value_changed" from="SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="mouse_entered" from="FullScreenEnable" to="." method="_on_Hover"]
[connection signal="toggled" from="FullScreenEnable" to="." method="_on_FullScreenEnable_toggled"]
[connection signal="mouse_entered" from="DebugEnable" to="." method="_on_DebugEnable_mouse_entered"]
[connection signal="toggled" from="DebugEnable" to="." method="_on_DebugEnable_toggled"]
[connection signal="mouse_entered" from="Copyrights" to="." method="_on_Copyrights_mouse_entered"]
[connection signal="mouse_exited" from="Copyrights" to="." method="_on_Copyrights_mouse_exited"]
[connection signal="mouse_entered" from="Help" to="." method="_on_Help_mouse_entered"]
[connection signal="mouse_exited" from="Help" to="." method="_on_Help_mouse_exited"]
